# simple_bot

./: .gitignore  pyproject.toml
src/bot/: constructors.py  main.py
